# makedataset

./: .env.example  .gitignore  RAG評価データセット作成手順書.md  README.md  pyproject.toml  rag_eval_dataset_plan.md  rag_eval_dataset_r1_plan.md
prompts/: generate.md  generate_kg_poc.md  judge.md  probe.md  rag_verify.md
src/rageval/: __init__.py  aspects.py  azure_di.py  chunker.py  cli.py  filter.py  generate.py  llm.py  probe.py  prompts.py  rag_verify.py  review_app.py  sampling.py  schema.py  stats_app.py
src/rageval/tracks/: __init__.py  kg_poc.py
tests/: test_azure_di.py  test_chunker.py  test_filter.py  test_generate.py  test_rag_verify.py  test_sampling.py  test_schema.py
